Fix height flickering issue
With "height: 100vh", the height will be 100vw as default and will not flicker until the height calculation in the hook finishes.

--- a/src/app.scss
+++ b/src/app.scss
@@ -34,6 +34,7 @@ body {
 }
 
 #root {
+  height: 100vh;
   @media (min-width: global.$breakpoint-tablet) {
     display: grid;
     grid-template-rows: 1fr;
